# micro-all-the-things

./: .gitignore  MyLogAlyzer_commands.md  Readme.md  bug_broswer_jquery.md  chatgpt.md  delete-schema.sh  insert_data.sh  solr_schema.sh  start_solr.sh
code/backend/rust/: Cargo.toml  Dockerfile  apiclientpackage  apiclientprefix  authentication.md  compose.yml  config.toml  customer_and_price.md  docker-entrypoint.sh  readme.md  response_schema_prod.json  run_docker.sh  schema_prod.json  search.md  search_via_proxythingi.md  webflux_search_search_index.json
code/backend/rust/cheatsheet/: index.html
code/backend/rust/common/: Cargo.toml
code/backend/rust/common/src/: crew.rs  entity.rs  episode.rs  lib.rs  logging_service_client.rs  meili_filter.rs  meili_read_docs.rs  meili_search.rs  meilisearch.rs  movie.rs  movieaka.rs  person.rs  principal.rs  rating.rs  search.rs  search_doc.rs  tsv.rs
code/backend/rust/common/src/entity/: entity.rs
code/backend/rust/common/src/helper/: mod.rs
code/backend/rust/common/src/logging/: logging.rs  logging_service_client.rs  mod.rs  tracing_headers.rs
code/backend/rust/common/src/meili/: meili.rs  meili_entity.rs  meili_filter.rs  meili_http.rs  meili_models.rs  meili_read_docs.rs  meili_search.rs  mod.rs
code/backend/rust/common/src/models/: article.rs  authentication.rs  crew.rs  customer.rs  customer_prices.rs  episode.rs  mod.rs  movie.rs  movieaka.rs  person.rs  prices.rs  principal.rs  rating.rs  search_doc.rs
code/backend/rust/common/src/server/: mod.rs  warp_cors.rs
code/backend/rust/common/src/solr/: mod.rs  models.rs  solr.rs  solr_entity.rs  solr_filter.rs  solr_http.rs  solr_models.rs  solr_read_docs.rs  solr_search.rs
code/backend/rust/common/src/tsv/: tsv.rs
code/backend/rust/customer/authenticationservice/: Cargo.toml
code/backend/rust/customer/authenticationservice/sql/: sql_struct.sql
code/backend/rust/customer/authenticationservice/src/: main.rs
code/backend/rust/customer/customerpriceservice/: Cargo.toml
code/backend/rust/customer/customerpriceservice/sql/: sql_struct.sql
code/backend/rust/customer/customerpriceservice/src/: main.rs
code/backend/rust/customer/customerservice/: Cargo.toml
code/backend/rust/customer/customerservice/src/: main.rs
code/backend/rust/datasupply/common/: Cargo.toml
code/backend/rust/datasupply/common/src/: lib.rs
code/backend/rust/datasupply/rust_crewwriter/: .env  Cargo.toml  Dockerfile
code/backend/rust/datasupply/rust_crewwriter/src/: crew_rest.rs  main.rs
code/backend/rust/datasupply/rust_episodewriter/: .env  Cargo.toml
code/backend/rust/datasupply/rust_episodewriter/src/: episode_rest.rs  main.rs
code/backend/rust/datasupply/rust_movieakaswriter/: .env  Cargo.toml
code/backend/rust/datasupply/rust_moviewriter/: .env  Cargo.toml
code/backend/rust/datasupply/rust_personwriter/: .env  Cargo.toml
code/backend/rust/datasupply/rust_principalwriter/: .env  Cargo.toml
code/backend/rust/datasupply/rust_ratingwriter/: .env  Cargo.toml
code/backend/rust/datasupply/rust_tsvfilereader/: .env  Cargo.toml  config.toml
code/backend/rust/price/priceservice/: Cargo.toml
code/backend/rust/priceservice/: Cargo.toml  readme_log.md
code/backend/rust/priceservice/sql/: sql_struct.sql
code/backend/rust/priceservice/src/: main.rs
code/backend/rust/search/rust_create_search_index/: Cargo.toml  config.toml
code/backend/rust/search/rust_crewsearch/: Cargo.toml  config.toml
code/backend/rust/search/rust_movieakasearch/: Cargo.toml
code/backend/rust/search/rust_moviesearch/: Cargo.toml
code/backend/rust/search/rust_personsearch/: Cargo.toml  config.toml
code/backend/rust/search/rust_principalsearch/: Cargo.toml
code/backend/rust/search/rust_ratingsearch/: Cargo.toml
code/backend/rust/search/rust_search_article/: Cargo.toml
code/backend/rust/search/rust_search_search_index/: Cargo.toml
code/backend/rust/sql/: sql_auth.sql  sql_customer.sql  sql_logging.sql
code/backend/rust/tooling/logservice/: Cargo.toml  readme_log.md
code/backend/rust/tooling/micro_swagger/: Cargo.toml
code/backend/rust/tooling/serialize_facets/: Cargo.toml
code/backend/rust/ubuntu/: add_filterable_attributes.sh  bla.xml  config.toml  config.toml_meiliconfig  create_search_docs.sh  insert_date_into_indices.sh  meilisearch.service  readme.md  reate_search_docs.sh  restart_services.sh  rust_authenticationservice.service  rust_create_search_article.service  rust_create_search_index.service  rust_crewwriter.service  rust_customerpriceservice.service  rust_customerservice.service  rust_episodewriter.service  rust_logservice.service  rust_movieakaswriter.service  rust_moviewriter.service  rust_personwriter.service  rust_principalwriter.service  rust_ratingwriter.service  rust_search_article.service  rust_search_crew.service  rust_search_movie.service  rust_search_movieaka.service  rust_search_person.service  rust_search_principal.service  rust_search_rating.service  rust_search_search_index.service  rust_tsvfilereader.service  services
code/backend/rust/ubuntu/nginx/: solr
frontend/: run.sh
scripts/: build-solr.md  (+8 more)
(+1141 files in other folders)
