[workspace]

members = [
    "datasupply/rust_crewwriter",
    "datasupply/rust_episodewriter",
    "datasupply/rust_movieakaswriter",
    "datasupply/rust_moviewriter",
    "datasupply/rust_personwriter",
    "datasupply/rust_principalwriter",
    "datasupply/rust_ratingwriter",
    "datasupply/rust_tsvfilereader",
    "search/rust_moviesearch",
    "search/rust_movieakasearch",
    "search/rust_create_search_index",
    "search/rust_personsearch",
    "search/rust_principalsearch",
    "search/rust_ratingsearch",
    "search/rust_crewsearch",
    "search/rust_search_search_index",
    "common",
    "tooling/logservice",
    "tooling/micro_swagger",
    "customer/customerpriceservice",
    "customer/customerservice",
    "price/priceservice"
]
