[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_urlencoded = "0.7.1"
serde_derive = "1.0.155"
reqwest = { version = "0.11.16", features = ["stream", "json"] }
warp = "0.3.4"