[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_urlencoded = "0.7.1"
serde_derive = "1.0.155"
reqwest = { version = "0.11.16", features = ["stream", "json"] }
warp = "0.3.4"
thiserror = "1.0.39"
tokio-postgres = { version = "0.7.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
chrono = { version = "0.4.24", features = ["serde", "clock"] }
lazy_static = "1.4.0"
config = "0.13.3"
log = "0.4.17"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

