[package]
name = "rust_personsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.5"
dotenvy = "0.15"
tokio = { version = "1.26.0", features = ["full"] }
reqwest = { version = "0.11.16", features = ["json", "stream"] }
common = { path = "../../common" }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_urlencoded = "0.7.1"
serde_derive = "1.0.155"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4"


[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.27"
